chore: fix visibility input css specificity issue

--- a/src/Components/Inputs/Composed/VisibilityInput.scss
+++ b/src/Components/Inputs/Composed/VisibilityInput.scss
@@ -5,7 +5,7 @@
   ------------------------------------------------------------------------------
 */
 
-.cf-visibility-input--icon {
+#visibilityIcon {
   background: transparent;
   background-image: none;
   border: none;
